--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -6,10 +6,12 @@ spring:
     config:
       server:
         git:
-          uri:
+          uri: https://github.com/gusallc/microservice-course.git
           search-paths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
+        bootstrap: true
+        default-label: feature/configuration
   security:
     user:
       name: root
