--- a/config-data/product-service.yml
+++ b/config-data/product-service.yml
@@ -15,7 +15,7 @@ spring:
   # DB
   # ===============================
   datasource:
-    url: jdbc:h2:mem:productDB
+    url: jdbc:h2:mem:productDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
     password:
