probando defaultZone por default-zone en yml

--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -40,4 +40,4 @@ logging:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8099/eureka/
+      default-zone: http://localhost:8099/eureka/
