--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -40,4 +40,4 @@ logging:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8099/eureka/
+      defaultZone: http://localhost:8099/eureka/
