--- a/service-product/build.gradle
+++ b/service-product/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'de.codecentric:spring-boot-admin-starter-client'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
