--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'de.codecentric:spring-boot-admin-starter-client'
     //Soluciona con request PATCH feign-httpclient
     implementation 'io.github.openfeign:feign-httpclient:11.8'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
