--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "2021.0.3")
+    set('springBootAdminVersion', "2.7.1")
 }
 
 dependencies {
@@ -48,6 +49,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
     }
 }
 
