--- a/shopping-service/build.gradle
+++ b/shopping-service/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'de.codecentric:spring-boot-admin-starter-client'
     //Soluciona con request PATCH feign-httpclient
     implementation 'io.github.openfeign:feign-httpclient:11.8'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     compileOnly 'org.projectlombok:lombok'
